--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-PyTelegramBotAPI==2.2.3
-telebot==0.0.3
-http.client
+telebot==0.0.4
+requests==2.28.1
+pyTelegramBotApi==4.4.0
+beautifulsoup4==4.10.0
+tabulate==0.8.9
